# mental-model-dl

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
scripts/: check_level1.py  run_experiment.py
src/: baselines.py  data.py  metrics.py  model.py  train.py
src/levels/: level1_concepts.py  level2_adaptation.py  level3_control.py
tests/: test_forward.py
